--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,7 +68,7 @@ dependencies {
 
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$lifecycle_version"
-
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0"
 
     implementation "androidx.compose.material:material-icons-extended:1.1.1"//图标扩展
     implementation ("io.coil-kt:coil-compose:2.0.0-rc01")//图片加载
